# ny-hackathon-twelvelabs

./: README.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
amber_aim/: .env  .env.example  API_USAGE.md  README.md  main.py  pyproject.toml
amber_aim/aim/: config.py  main.py
amber_aim/aim/models/: __init__.py  upload.py
amber_aim/aim/services/: __init__.py  s3_service.py
amber_aim/prompts/agents/: ads_agent.txt  placements_agent.txt
amber_aim/prompts/openai/: prompt.txt
amber_aim/prompts/twelvelabs/: prompt.txt
amber_aim/prompts/twelvelabs/others/: prompt12labs01.txt  prompt12labs02.txt  prompt12labs03.txt  prompt12labs04.txt
amber_aim/research/: 251004_analyze.py  251004_openai.py  251005_ads.py
amber_aim/src/aim/: __main__.py  config.py  logging_config.py  main.py
amber_aim/src/aim/models/: __init__.py  ads.py  analyze.py  placement.py  upload.py
amber_aim/src/aim/services/: __init__.py  agent.py  s3_service.py  twelve_labs_service.py
amber_aim_web/: COMPONENTS.md  README.md  SETUP.md  package-lock.json  package.json
amber_aim_web/amber-aim-frontend-standalone/: INTEGRATION.md  QUICKSTART.md  README_MAIN.md  next.config.ts  package-lock.json
amber_aim_web/amber-aim-frontend-standalone/components/: Timeline.tsx
amber_aim_web/amber-aim-frontend-standalone/utils/: videoThumbnails.ts
amber_aim_web/src/actions/: video.ts
amber_aim_web/src/app/: globals.css  (+3 more)
specs/001-i-want-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+19 files in other folders)
